--- a/.env
+++ b/.env
@@ -1,8 +1,13 @@
-DB_HOST= 'caboose.proxy.rlwy.net'
-DB_NAME='railway'
-DB_PASSWORD='agePOqzvQeWRNAgflEMAPhtMPjChmbop'
-DB_USERNAME='root'
-PORT=45294
+DB_HOST=caboose.proxy.rlwy.net
+DB_PORT=45294        ✅ ADD THIS
+DB_NAME=railway
+DB_USERNAME=root
+DB_PASSWORD=agePOqzvQeWRNAgflEMAPhtMPjChmbop
+
+PORT=3000            ✅ CHANGE THIS (any free port)
+
+NODE_ENV=production
+DB_SSL=true
 
 SECRET_KEY="PROCXA09"
 ACCESS_SECRET_KEY="PROCXA@#"
@@ -15,4 +20,9 @@ RESET_TOKEN_EXPIRATION_MS='120000'
 SMTP_USER="sonerriya@gmail.com"
 SMTP_PASS="pohu frhe ectf wcwd"
 RECIPIENT_EMAIL='recipient@example.com'
+
+
+
+
+
 
