--- a/.env
+++ b/.env
@@ -13,7 +13,7 @@ SECRET_KEY="PROCXA09"
 ACCESS_SECRET_KEY="PROCXA@#"
 REFRESH_SECRET_KEY="PROCXA$"
 
-FRONTEND_URL="https://procxa-ai-ktiam.netlify.app/"
+FRONTEND_URL=https://procxa-ai-ktiam.netlify.app/
 
 RESET_TOKEN_EXPIRATION_MS='120000'
 
